# Android_Developing

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ncnn_pro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  squeezencnn_jni.cpp
app/src/main/java/com/example/ncnn_pro/: MainActivity.java  SqueezeNcnn.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ncnn_pro/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
